--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "react-markdown": "^8.0.3",
     "react-uuid": "^2.0.0",
     "vite": "^3.1.0"
   }
